Kubernetes/Code/Manifests/service3.yml
---
apiVersion: v1
kind: Service
metadata:
  name: deploythreeservice
  namespace: my-app
  labels:
    prometheus-enabled: "true"
spec:
  ports:
  - port: 8501
    targetPort: 8501
    protocol: TCP
  selector:
    app: nginx
  type: ClusterIP
