Kubernetes/Code/Manifests/grafana_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.krazyworks.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 443
  tls:
  - hosts:
    - grafana.krazyworks.shop
    # reference secret for production TLS certificate
    secretName: app-grafana-certificate
