Kubernetes/Code/Manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rules
  namespace: my-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.krazyworks.shop
    # reference secret for production TLS certificate
    secretName: miniapi-production-certificatee
  rules:
   - host: www.krazyworks.shop 
     http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: deployoneservice
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: deploytwoservice
            port:
              number: 80
      - path: /v3
        pathType: Prefix
        backend:
          service:
            name: deploythreeservice
            port:
              number: 443

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress-rules
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
   - http:
      paths:
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
